// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media should match the snapshot 1`] = `
<styled.div
  width="100%"
>
  <img
    alt="alternative"
  />
</styled.div>
`;

exports[`Media should match the snapshot with different component 1`] = `
<styled.div
  width="100%"
>
  <video
    alt="alternative"
  />
</styled.div>
`;
